--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <title>Clock</title>
 </head>
 <body>
-    
+    <div class="wrapper-time">
+        <div class="time">
+            <p class="hour"></p>
+            <p class="min"></p>
+            <p class="seconds"></p>
+        </div>
+        <div class="timer">
+            <button class="start-timer">Установить таймер</button>
+            <input type="text" name="time" id="ti" class="timer-time timer-input_disable" placeholder="Введите время таймера (сек)">
+            <button class="start-timer timer-ok">Ок</button>
+        </div>
+    </div>
 </body>
 </html>
