--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,6 +13,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Clock</title>
 </head>
+
 <body>
     <div class="wrapper-time">
         <div class="time">
@@ -21,9 +23,11 @@
         </div>
         <div class="timer">
             <button class="start-timer">Установить таймер</button>
-            <input type="text" name="time" id="ti" class="timer-time timer-input_disable" placeholder="Введите время таймера (сек)">
+            <input type="text" name="time" id="ti" class="timer-time timer-input_disable"
+                placeholder="Введите время таймера (сек)">
             <button class="start-timer timer-ok">Ок</button>
         </div>
     </div>
 </body>
+
 </html>
