--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../clock/css/reset.css">
+    <link rel="stylesheet" href="../clock/css/normalize.css">
+    <link rel="stylesheet" href="../clock/css/clock.css">
     <title>Clock</title>
 </head>
 
@@ -28,6 +28,7 @@
             <button class="start-timer timer-ok">Ок</button>
         </div>
     </div>
+    <script src="clock.js"></script>
 </body>
 
 </html>
